--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(200,200,200);
+	background: url("https://slidechef.net/wp-content/uploads/2022/05/PowerPoint-Chemistry-Background.jpg");
     color: rgb(0,0,0);
     font-family: "Open Sans", sans-serif;
     text-align: center;
