--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(200,200,200);
-	background: url("https://slidechef.net/wp-content/uploads/2022/05/PowerPoint-Chemistry-Background.jpg");
+	background: url("https://i.pinimg.com/originals/d4/bf/ce/d4bfce6b5294e36e6249b2452fc11eb0.jpg");
     color: rgb(0,0,0);
     font-family: "Open Sans", sans-serif;
     text-align: center;
