--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,14 @@ header {
 	
 }
 
+h1 {
+	color: white;
+}
+
+h3 {
+	color: white;
+}
+
 .btn1 {
   letter-spacing: 0.1px;
     font-style: bold;
@@ -23,9 +31,9 @@ header {
     height: 40px;
     border: none;
     color: black;
-    background-color: cyan;
+    background-color: white;
     border-radius: 4px;
-    box-shadow: inset 0 0 0 0 magenta;
+    box-shadow: inset 0 0 0 0 gray;
     transition: ease-out 0.5s;
     font-size: 20px;
     outline: none;
@@ -33,7 +41,7 @@ header {
 }
 
 .btn1:hover {
-  box-shadow: inset 220px 0 0 0 magenta;
+  box-shadow: inset 220px 0 0 0 gray;
     color: white;
     cursor: pointer;
   font-size: 19px;
@@ -58,9 +66,9 @@ header {
     height: 20px;
     border: none;
     color: black;
-    background-color: cyan;
+    background-color: white;
     border-radius: 4px;
-    box-shadow: inset 0 0 0 0 magenta;
+    box-shadow: inset 0 0 0 0 gray;
     transition: ease-out 0.35s;
     font-size: 15px;
     outline: none;
@@ -68,8 +76,8 @@ header {
 }
 
 .ftr:hover {
-  box-shadow: inset 220px 0 0 0 magenta;
-    color: gray;
+  box-shadow: inset 220px 0 0 0 gray;
+    color: white;
     cursor: pointer;
   font-size: 14px;
 }
